--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "agent-of-empires"
-version = "0.0.7"
+version = "0.0.8"
 edition = "2021"
 authors = ["Agent of Empires Contributors"]
 description = "Terminal session manager for AI coding agents"
@@ -45,6 +45,9 @@ chrono = { version = "0.4", features = ["serde"] }
 
 # UUID generation
 uuid = { version = "1.11", features = ["v4"] }
+
+# Random
+rand = "0.8"
 
 # Directory utilities
 dirs = "5.0"
